[package]
name = "styx"
version = "0.1.0"
edition = "2021"
authors = ["Lee Smet <lee.smet@hotmail.com>"]
readme = "./README.md"
repository = "https://github.com/LeeSmet/styx"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-tun = "0.7.0"
tokio-util = { version = "0.7.4", features = ["full"] }
etherparse = "0.12.0"
bytes = "1.2.1"
futures = "0.3.24"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
curve25519-dalek = "3.2.1"
